--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Static</title>
+  <title>Frontend</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
